<resources>
    <string name="app_name">PartyPortal</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="edit_login">Enter username</string>
    <string name="edit_password">Enter password</string>
    <string name="login_button">LOG IN</string>
    <string name="register_button">SIGN UP</string>
    <string name="email">EMAIL</string>
    <string name="edit_email">Enter email</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="logout">Logout</string>
    <string name="order">Order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login_">Login_Activity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">KFC</string>
    <string name="title_section2">McDonald</string>
    <string name="title_section3">Burger King</string>
    <string name="title_section4">Pizza Hut</string>
    <string name="title_activity_loading">Loading</string>
    <string name="title_activity_details">Details</string>
    <string name="title_activity_order_">Order_Activity</string>
    <string name="PRICE">Price</string>
    <string name="SIZE">Size</string>
    <string name="TASTE">Taste</string>
</resources>

