<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Sign_upFragment">
    <TextView
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/email"
        android:id="@+id/textView2"
        android:layout_marginStart="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="226dp" />
    <EditText
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@id/textView2"
        android:layout_toEndOf="@id/textView2"
        android:id="@+id/email"
        android:hint="@string/edit_email"/>
    <TextView
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="2dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login"
        android:id="@+id/textView"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />
    <EditText
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@id/textView"
        android:layout_toEndOf="@id/textView"
        android:hint="@string/edit_login"
        android:id="@+id/login" />
    <TextView
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="2dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/password"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView" />
    <EditText
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:hint="@string/edit_password"
        android:inputType="textPassword"
        android:layout_alignBaseline="@id/textView3"
        android:layout_toEndOf="@id/textView3"
        android:id="@+id/password" />

    <View
        android:layout_marginLeft="1dp"
        android:layout_width="270dp"
        android:layout_height="3dp"
        android:background="@android:color/background_dark"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView" />
    <View
        android:layout_marginLeft="1dp"
        android:layout_width="270dp"
        android:layout_height="3dp"
        android:background="@android:color/background_dark"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:id="@+id/view2" />
    <View
        android:layout_marginLeft="1dp"
        android:layout_width="270dp"
        android:layout_height="3dp"
        android:background="@android:color/background_dark"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:id="@+id/view3" />
    <View
        android:layout_marginLeft="1dp"
        android:layout_width="270dp"
        android:layout_height="3dp"
        android:background="@android:color/background_dark"
        android:layout_below="@+id/button"
        android:layout_alignStart="@+id/button"
        android:id="@+id/view" />
    <View
        android:layout_marginLeft="-3dp"
        android:layout_width="3dp"
        android:layout_height="128dp"
        android:background="@android:color/background_dark"
        android:layout_alignBottom="@+id/view"
        android:layout_toEndOf="@+id/view" />
    <View
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="2dp"
        android:layout_width="3dp"
        android:layout_height="94dp"
        android:background="@android:color/background_dark"
        android:layout_above="@+id/button"
        android:layout_toEndOf="@+id/textView2" />
    <Button
        android:layout_width="270dp"
        android:layout_height="30dp"
        android:layout_marginTop="2dp"
        android:text="@string/register_button"
        android:id="@+id/button"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />
</RelativeLayout>
