<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.example.wojciech.partytime.Login_Fragment"
    android:id="@+id/login">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/email"
        android:id="@+id/textView2"
        android:layout_marginStart="69dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="226dp" />
    <EditText
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@id/textView2"
        android:layout_toEndOf="@id/textView2"
        android:id="@+id/email"
        android:hint="@string/edit_email"/>
    <TextView
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="2dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/password"
        android:id="@+id/textView"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />
    <EditText
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@id/textView"
        android:layout_toEndOf="@id/textView"
        android:hint="@string/edit_password"/>

    <View
        android:layout_marginLeft="1dp"
        android:layout_width="240dp"
        android:layout_height="3dp"
        android:background="@android:color/background_dark"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:id="@+id/view4" />
    <View
        android:layout_marginLeft="1dp"
        android:layout_width="240dp"
        android:layout_height="3dp"
        android:background="@android:color/background_dark"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:id="@+id/view2" />

    <View
        android:layout_marginLeft="1dp"
        android:layout_width="240dp"
        android:layout_height="3dp"
        android:background="@android:color/background_dark"
        android:layout_below="@+id/button"
        android:layout_alignStart="@+id/button"
        android:id="@+id/view" />
    <View
        android:layout_marginTop="3dp"
        android:layout_width="3dp"
        android:layout_height="92dp"
        android:background="@android:color/background_dark"
        android:layout_above="@id/view"
        android:layout_toEndOf="@+id/email" />
    <View
        android:layout_width="3dp"
        android:layout_height="94dp"
        android:background="@android:color/background_dark"
        android:id="@+id/view5"
        android:layout_above="@+id/view"
        android:layout_toEndOf="@+id/textView2" />
    <Button
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="2dp"
        android:text="@string/login_button"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView" />
</RelativeLayout>
