<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.wojciech.partytime.Login_Activity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" tools:context="com.example.wojciech.partytime.Login_Fragment"
        android:id="@+id/login">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/email"
            android:id="@+id/textView2"
            android:layout_marginStart="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="210dp" />
        <EditText
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_alignBaseline="@id/textView2"
            android:layout_toEndOf="@id/textView2"
            android:id="@+id/email"
            android:hint="@string/edit_email"/>
        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginTop="2dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/password"
            android:id="@+id/textView"
            android:layout_below="@+id/textView2"
            android:layout_alignStart="@+id/textView2" />
        <EditText
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_alignBaseline="@id/textView"
            android:id="@+id/pass"
            android:layout_toEndOf="@id/textView"
            android:inputType="textPassword"
            android:hint="@string/edit_password"/>

        <View
            android:layout_marginLeft="1dp"
            android:layout_width="270dp"
            android:layout_height="3dp"
            android:background="@android:color/background_dark"
            android:layout_below="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:id="@+id/view4" />
        <View
            android:layout_marginLeft="1dp"
            android:layout_width="270dp"
            android:layout_height="3dp"
            android:background="@android:color/background_dark"
            android:layout_below="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:id="@+id/view2" />

        <View
            android:layout_marginLeft="1dp"
            android:layout_width="270dp"
            android:layout_height="3dp"
            android:background="@android:color/background_dark"
            android:layout_below="@+id/login_button2"
            android:layout_alignStart="@+id/login_button2"
            android:id="@+id/view" />

        <View
            android:layout_marginLeft="-2dp"
            android:layout_width="3dp"
            android:layout_height="94dp"
            android:background="@android:color/background_dark"
            android:id="@+id/view5"
            android:layout_above="@+id/view"
            android:layout_toEndOf="@+id/textView2" />
        <Button
            android:layout_width="270dp"
            android:layout_height="30dp"
            android:layout_marginTop="2dp"
            android:text="@string/login_button"
            android:id="@+id/login_button2"
            android:layout_below="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:onClick="loginClick"/>

        <Button
            android:layout_width="270dp"
            android:layout_height="30dp"
            android:text="@string/create_account"
            android:id="@+id/create_account"
            android:layout_below="@+id/view"
            android:layout_alignStart="@id/login_button2"
            android:onClick="createAccount"/>
        <View
            android:layout_marginLeft="1dp"
            android:layout_width="270dp"
            android:layout_height="3dp"
            android:background="@android:color/background_dark"
            android:layout_below="@id/create_account"
            android:layout_alignStart="@id/create_account"
            android:id="@+id/view3" />
        <View
            android:layout_marginLeft="-2dp"
            android:layout_marginTop="3dp"
            android:layout_width="3dp"
            android:layout_height="124dp"
            android:background="@android:color/background_dark"
            android:layout_above="@id/view3"
            android:layout_toEndOf="@+id/email" />
    </RelativeLayout>


</RelativeLayout>
