<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.wojciech.partytime.View.Order_ActivityFragment"
    android:fillViewport="false"
    android:id="@+id/fragment_order">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linear_1"
            android:layout_marginTop="2dp">
            <TextView android:text="@string/hello_world"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/title" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_2"
        android:layout_below="@+id/linear_1"
        android:layout_marginTop="2dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/obrazek"
        android:src="@drawable/normal_blue_button"
        />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linear_3"
            android:layout_below="@id/linear_2"
            android:layout_marginTop="2dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/describe"
                android:layout_below="@+id/obrazek"/>
        </LinearLayout>
        <RelativeLayout android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_3">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:id="@+id/linear_5"
            android:layout_below="@+id/linear_3"
            android:orientation="vertical"
            android:layout_marginTop="2dp"
            android:visibility="gone">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/SIZE"
                android:id="@+id/Size"
                android:visibility="gone"/>
            <RadioGroup
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/radio_group_1"
                >
                <RadioButton
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:id="@+id/radio_button_1"/>
                <RadioButton
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:id="@+id/radio_button_2"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linear_6"
            android:layout_toEndOf="@+id/linear_5"
            android:orientation="vertical"
            android:layout_marginTop="2dp"
            android:visibility="gone"
            android:layout_below="@id/linear_3"
            >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/TASTE"
                android:visibility="gone"
                android:id="@+id/Taste"/>
            <RadioGroup
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/radio_group_2"
                >
                <RadioButton
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:id="@+id/radio_button_3"/>
                <RadioButton
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:id="@+id/radio_button_4"/>
                <RadioButton
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:id="@+id/radio_button_5"/>
            </RadioGroup>
        </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linear_4"
            android:layout_below="@+id/group"
            android:layout_marginTop="6dp"
            android:weightSum="4"
            android:gravity="right">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/price"
                android:layout_weight="0.5"
                android:text="@string/PRICE"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/price"
                android:id="@+id/price"
                android:layout_weight="0.5"
                />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_below="@+id/linear_4"
        android:layout_marginTop="2dp">
        <Button
            android:layout_width="80dp"
            android:layout_height="@dimen/default_high_button"
            android:text="@string/order"
            android:onClick="Order"/>
    </LinearLayout>

    </RelativeLayout>
</ScrollView>

